# nathanjhood

./: .bash_profile  .bashrc  .editorconfig  .env.development  .env.production  .env.test  .gitattributes  .gitignore  .gitmodules  .vcpkgrc  CMakeLists.txt  Doxyfile  README.md  VERSION  app.json  babel.config.js  eslint.config.mjs  index.html  index.js  metro.config.js  package.json  prettier.config.mjs  react-native.config.mjs  tsconfig.json  vcpkg.json
.github/workflows/: actions.yml  cli.yml
Development/: .gitignore
Development/StoneyDSP/: .gitignore
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/nathanjhood/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
app/: App.tsx
doc/html/: index.html  md__r_e_a_d_m_e.html  pages.html
doc/html/d3/dcc/: md__r_e_a_d_m_e.html
doc/latex/: md__r_e_a_d_m_e.tex  refman.tex
gitstuff/: COMMIT_EDITMSG  FETCH_HEAD  config  index
gitstuff/logs/: HEAD
gitstuff/logs/refs/heads/: main
gitstuff/logs/refs/remotes/origin/: main
gitstuff/modules/Development/StoneyDSP/CMakeProject1/: config  index  packed-refs
gitstuff/modules/Development/StoneyDSP/CMakeProject1/logs/refs/remotes/origin/: HEAD
gitstuff/modules/Development/StoneyDSP/CMakeProject1/objects/pack/: pack-cad17928c0982d4802a627ba94d28a6f088da4db.idx  pack-cad17928c0982d4802a627ba94d28a6f088da4db.pack
gitstuff/modules/Development/StoneyDSP/CMakeProject1/refs/heads/: main
gitstuff/modules/Development/StoneyDSP/fmt/: config  index  packed-refs
gitstuff/modules/Development/StoneyDSP/fmt/logs/: HEAD
gitstuff/modules/Development/StoneyDSP/fmt/objects/pack/: pack-26f339fb7f45932e26f867948c037ef5b8a1e4ef.idx
gitstuff/modules/Development/StoneyDSP/fmt/refs/heads/: master
gitstuff/modules/vcpkg/: config  index  packed-refs
gitstuff/modules/vcpkg/logs/: HEAD
gitstuff/modules/vcpkg/refs/heads/: master
gitstuff/refs/heads/: main
include/: main.cpp  main.h
include/StoneyDSP/: Main.h  stoneydsp.cpp  stoneydsp.h
include/StoneyDSP/modules/stoneydsp_core/: stoneydsp_core.cpp  stoneydsp_core.h  stoneydsp_core.mm
include/StoneyDSP/modules/stoneydsp_core/application/: stoneydsp_StateInfo.h
include/StoneyDSP/modules/stoneydsp_core/maths/: stoneydsp_constants.h
include/StoneyDSP/modules/stoneydsp_core/memory/: stoneydsp_unique_ptr.h
include/StoneyDSP/modules/stoneydsp_core/native/: stoneydsp_unicode.h
include/StoneyDSP/modules/stoneydsp_core/res/: stoneydsp_resource.h
include/StoneyDSP/modules/stoneydsp_core/system/: stoneydsp_BaseWindow.h  stoneydsp_DpiScale.h  stoneydsp_MainWindow.h  stoneydsp_standard_header.h  stoneydsp_target_platform.h
include/StoneyDSP/modules/stoneydsp_core/types/: stoneydsp_types.h  stoneydsp_value.h
include/StoneyDSP/modules/stoneydsp_core/version/: stoneydsp_version.h
include/StoneyDSP/modules/stoneydsp_nodejs/: stoneydsp_nodejs.mm
ios/: Podfile
ios/nathanjhood/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/nathanjhood.xcodeproj/: project.pbxproj
ios/nathanjhood.xcodeproj/xcshareddata/xcschemes/: nathanjhood.xcscheme
ios/nathanjhoodTests/: nathanjhoodTests.m
modules/include/: main.cpp
modules/include/StoneyDSP/: stoneydsp.h
modules/include/StoneyDSP/modules/stoneydsp_core/: stoneydsp_core.cpp
modules/include/StoneyDSP/modules/stoneydsp_core/native/: stoneydsp_native_headers.h
modules/include/StoneyDSP/modules/stoneydsp_core/res/: stoneydsp.manifest  stoneydsp.rc  stoneydsp_rc.hpp
modules/include/StoneyDSP/modules/stoneydsp_core/system/: stoneydsp_compiler_support.h  stoneydsp_platform_defs.h
modules/include/StoneyDSP/modules/stoneydsp_core/types/: stoneydsp_value.h
modules/include/StoneyDSP/modules/stoneydsp_nodejs/: stoneydsp_nodejs.cpp  stoneydsp_nodejs.h
public/: index.html
scripts/: dev.ts
scripts/utils/: getPaths.ts
share/: StoneyDSPConfig.cmake.in
share/cmake/Modules/: GetSourceInfo.cmake  Join.cmake
src/: App.test.tsx  App.tsx  AppButton.tsx  Keys.tsx  Main.cpp  app-env.d.ts  index.web.tsx  reportWebVitals.ts
src/components/: AsyncButton.tsx
src/constants/: TypedColors.ts
src/features/counter/: Counter.tsx  counterAPI.ts
src/features/quotes/: Quotes.tsx  quotesApiSlice.ts
src/js/bind/: bind.js
src/js/server/: server.js
src/ts/bind/: bind.d.ts  bind.ts
